crates/solidity/testing/snapshots/bindings_output/yul/identifiers_with_dots/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected CloseBrace or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or Equal or EqualColon or OpenBrace or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or YulBreakKeyword or YulContinueKeyword or YulDecimalLiteral or YulFalseKeyword or YulForKeyword or YulFunctionKeyword or YulHexLiteral or YulIdentifier or YulIfKeyword or YulLetKeyword or YulSwitchKeyword or YulTrueKeyword.
   ╭─[input.sol:4:18]
   │
 4 │ ╭─▶             let x.y.z := 0
   ┆ ┆   
 6 │ ├─▶         }
   │ │               
   │ ╰─────────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 2
   │ 
 4 │             let x.y.z := 0
   │                 ┬  
   │                 ╰── name: 3
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭─│ ▶ contract Test {
 2 │ │ ╭─▶     function test() public {
   ┆ ┆ ┆   
 4 │ │ │               let x.y.z := 0
   │ │ │   ────────┬────────  
   │ │ │           ╰────────── definiens: 3
   ┆ ┆ ┆   
 7 │ │ ├─▶     }
   │ │ │           
   │ │ ╰─────────── definiens: 2
 8 │ ├───▶ }
   │ │         
   │ ╰───────── definiens: 1
───╯
